[package]
name = "lucchetto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
lucchetto-macros = { path = "crates/lucchetto-macros" }
rb-sys = "*"

[workspace]
members = [
    "crates/lucchetto-macros",
]
exclude = [
    "examples/simple/ext/simple"
]
