[package]
name = "lucchetto"
version = "0.3.0"
edition = "2021"
description = "easily call a rust function without holding the GVL lock"
license-file = "./LICENSE"
homepage = "https://github.com/Maaarcocr/lucchetto"
repository = "https://github.com/Maaarcocr/lucchetto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucchetto-macros = { path = "crates/lucchetto-macros", version = "0.2.0" }
paste = "1.0.14"
rb-sys = "0"
static_assertions = "1.1.0"

[workspace]
members = [
    "crates/lucchetto-macros",
]

exclude = [
    "examples/simple/ext/simple"
]
