[package]
name = "lucchetto-macros"
version = "0.1.0"
edition = "2021"
description = "macros crate for lucchetto"
license-file = "../../LICENSE"
homepage = "https://github.com/Maaarcocr/lucchetto"
repository = "https://github.com/Maaarcocr/lucchetto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

