[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "*", features = ["rb-sys"] }
rb-sys = "0.9.82"
lucchetto = { path = "../../../../" }
# enable rb-sys feature to test against Ruby head. This is only needed if you
# want to work with the unreleased, in-development, next version of Ruby
